--- a/bylaws.tex
+++ b/bylaws.tex
@@ -64,7 +64,7 @@ The CMB-S4 collaboration will carry out a CMB science program including the desi
 
 \subsection{Definitions}
 
-Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of the motion.   A ``majority vote" requires only half the votes received.   Two-thirds of eligible voters must cast votes (including abstentions) for a vote to be valid.    A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" members of a governance body are those whose membership is due to their roles elsewhere in the Collaboration.  For example, the Science Council chairs (\S\ref{sec:SC}) are ex officio members of the Executive Team (\S\ref{sec:exec}).  
+Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of the motion.   A ``majority vote" requires only half the votes received.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" members of a governance body are those whose membership is due to their roles elsewhere in the Collaboration.  For example, the Science Council chairs (\S\ref{sec:SC}) are ex officio members of the Executive Team (\S\ref{sec:exec}).  
 
  %The presence of a simple majority of a body's members constitutes quorum for a meeting, and two-thirds of a body must be present for a vote to be valid.
 
@@ -87,7 +87,7 @@ Under each of these bodies a number of councils, committees, and working groups 
 
 \section{Governing Board}
 
-The Governing Board, a body whose composition is designed to be representative of the membership of the collaboration as a whole, is the ultimate policy forming body of the CMB-S4 collaboration. 
+The Governing Board (GB), a body whose composition is designed to be representative of the membership of the collaboration as a whole, is the ultimate policy forming body of the CMB-S4 collaboration. 
 
 \subsection{Scope}
 The Governing Board has two main roles: to facilitate discussion of collaboration-wide issues---especially those that concern the self-governance of CMB-S4 Collaboration as a whole---and to provide oversight of both the \exec \ and the co-spokepersons.
@@ -121,7 +121,7 @@ Governing Board activities include, but are not limited to:
 \textit{Any powers not explicitly assigned to a different governing body in these bylaws reside in the Governing Board}. 
 
 \subsection{Board Representation}
-The GB will be composed of 19 members. 
+The GB will be composed of 17 members. 
 To ensure that the board is truly ``\textbf{representative}'' of the collaboration, prior to the election the GB---or the ICCC for first election---will define various categories of representation it is deemed important to include on the GB (possibly including e.g., ``Tenure Track" early career scientists,  historically underrepresented groups, partner countries with significant membership, members of small institutions, etc). Both the GB and spokespersons---or the ICCC for first election---should particularly encourage suitable candidates in each of these categories to self-nominate for board membership.
 
 The length of a term of service for a Governing Board member is two years; members are allowed to serve at most two terms consecutively.
@@ -138,8 +138,8 @@ Every year, starting with the inception of the GB, the chair of the GB is electe
 
 
 \subsection{Governing Board Meetings}
-\textit{The first chaired Governing Board will establish rules for its meetings}. This first meeting will be held no later than 2 months after the selection of the board.  It is expected that the board will meet no less than every two months to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every CMB-S4 collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request a GB representative. Each meeting requires a quorum to conduct official GB business.
-GB votes can be held by email. Minutes of the GB meetings are distributed to the full CMB S4-collaboration by the GB chair or GB secretary. These minutes must include meeting attendance and the records of the votes cast by all GB members. It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate (via meeting attendance or email) in $>50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two year term.  
+\textit{The first chaired Governing Board will establish rules for its meetings}. This first meeting will be held no later than 2 months after the selection of the board.  It is expected that the board will meet no less than every two months to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every CMB-S4 collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request a GB representative. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB members must cast votes (including abstentions) for a vote to be valid.  
+GB votes can be held by email. Minutes of the GB meetings are distributed to the full CMB S4-collaboration by the GB chair or GB secretary. These minutes must include meeting attendance and the records of the votes cast by all GB members. It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate (via meeting attendance or email) in $\ge 50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two year term.  
 
 \subsection{Election and Voting Commission}
 The GB appoints the chair and two additional members of the Election and Voting Commission (EVC).  The EVC is charged with conducting elections as spelled out in \S\ref{sec:elections}. The EVC acts \textbf{independently} of the GB, but any points of substantive disagreement amongst the members should be referred back to the GB.  Commission members serve two-year terms ordinarily.  However, the GB may choose to extend the first term of the chair to  three years, to allow staggering of the membership for improved continuity between commissions.   Commission members may be removed with a supermajority vote of the GB.
@@ -251,19 +251,21 @@ To enable offset elections (to ensure an element of continuity in the GB), 50\% 
 \subsection{All Other Elected Positions}
 For other elected Collaboration roles, the Election Committee is charged with establishing election rules and conducting these elections. Note that the committee \textbf{can not} make voting requirements more restrictive than those for the main body elections. Elected  roles in additional positions are limited to at most 2 year terms. 
 
+\section{Councils and Committees}
+\label{sec:councils}
+Four of the organizational structures overseen by the Spokespersons have representatives on the \exec as described in \S\ref{exec}.  These are the Science Council, the Technical Council, the Membership Committee and the Publications and Speakers Committee.  Their composition and charges are described in this section.  Three other standing committees for the collaboration have been defined at this time and are described below.  
 
-\section{Science Council}
+\subsection{Science Council and Analysis Working Groups}
 \label{sec:SC}
 
-The Science Council is one of the major bodies established by the Governing board and overseen by the Spokespersons. It is charged to coordinate---in consultation with the co-spokespersons---the key scientific objectives of the CMB S4 collaboration. The Science council chairs are also members of the \exec. \textcolor{red}{The Science Council is responsible for maintaining a list of ``Key'' Science Topics as discussed in Section (PUB SECTION)}. 
+The Science Council works closely with the Spokespersons to coordinate the key scientific objectives of the CMB S4 collaboration.  The Science Council is led by two co-chairs elected by the Voting Members of the collaboration, who also serve as members of the \exec.  The remaining members of the Science Council are the co-coordinators of the various analysis working groups. These working groups  will be formally established by the Spokespersons. 
 
-The Council is composed of an overall chair and deputy-chair elected by the full S4 collaboration, as well as the co-coordinators of the various scientific working groups. These working groups are to be formally established by the Co-spokespersons,
-but will likely include groups similar to those established for the first CMB S4 science book, but not limited to the science book. 
+The Science Council approves the projects that lead to publications and is responsible for maintaining a list of ``Key'' Science Topics  (\S\ref{sec:pubs}).
 
-Each working group will have two co-coordinators who each serve for two year terms with the exception of one initial coordinator who will serve for a 3 year term to enable staggered appointments in the future.  The Science Council chairs will solicit self-nominations for these co-coordinators positions. The SP will appoint coordinators with the advice of the Science Council chairs while considering the distribution of early and late career members when making these appointments. Coordinators will ordinarily not serve back-to-back terms.
+Each analysis working group will have two co-coordinators who each serve for two year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future.  The Science Council chairs will solicit self-nominations for these co-coordinators positions. The Spokespersons will appoint coordinators with the advice of the Science Council chairs while considering the distribution of early and late career members when making these appointments. Coordinators will ordinarily not serve back-to-back terms.
 
 
-\section{Technical Council}
+\subsection{Technical Council and Technical Working Group}
 The Technical Council (TC) is a temporary major body established by the Governing Board and overseen by the Co-spokespersons. Prior to the formation of the Project, the TC is charged to coordinate---in consultation with the Co-spokespersons---the technical aspects needed to meet the scientific objectives of the CMB S4 collaboration. The TC chairs are also members of the \exec. 
 
 The Council is led by an overall chair and deputy-chair appointed by the Co-spokespersons and ratified by the Governing Board.  The co-leads of the various technical working groups are all members of the TC.  These working groups are to be formally established by the Co-spokespersons.   
@@ -272,14 +274,43 @@ Each working group will have two co-coordinators who each serve for two year ter
 
 We anticipate the role of and/or the need for the Technical Council will be readdressed in these Bylaws when a Project is formed.
 
-\section{Membership Council}
+\subsection{Membership Committee}
 
-The Membership Council (MC) consists of 7 people including a council chair. The chair is elected following the election cycle of the collaboration with  2 year terms, and is limited to 2 consecutive terms with 1 year off required before standing again. The 6 remaining members are appointed by the \shorte with the same term limits. If a council member leaves before their term is completed they may be replaced by the co-spokespersons with the ratification of the \shorte until the next election cycle occurs. MC members can be removed by a super majority of the GB at any time.  
+The Membership Committee (MC) consists of seven people including a chair. The chair is elected following the election cycle of the collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. The six remaining members are appointed by the \shorte\ with the same term limits. If a MC member leaves before their term is complete, the \shorte\ will appoint a replacement to finish out their term.  MC members can be removed by a supermajority of the GB at any time.  
 
 
-The appointed members should represent the overall collaboration, and there should be at least 2 members from the technical working groups and 2 members from the analysis working groups in the overall council. This balance may be amended as the scientific needs of the collaboration evolve. \Comment{This leaves two spots to encompass people who might not fall neatly into either group.}
+The appointed members of the MC should represent the overall collaboration, and there should be at least two members from the technical working groups and two members from the analysis working groups on the MC.  This balance may be amended as the scientific needs of the collaboration evolve. % \Comment{This leaves two spots to encompass people who might not fall neatly into either group.}
 
-\section{CMB-S4 Collaboration Membership Policy}
+The duties of the MC  are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. The MC maintains an up-to-date list of all members, available on a public website.  The MC in consultation with the \shorte\ will work with applicants and continuing members to identify roles and infrastructure tasks that add value, avoid redundancy, and make the collaboration as efficient as possible.  
+
+
+\subsection{Publication and Speakers  Committee}
+\label{sec:pubcouncil}
+ADD TEXT HERE DEFINING JUST THE MEMBERSHIP AND ROLES
+
+
+ chaired by an elected representative from the Executive Team.  There are two sub-committees: the Publications Board with eight collaboration members and the Speakers Bureau with four collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. 
+ 
+
+
+
+
+\subsection{Junior Scientist Advancement Committee}
+
+The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that junior members (defined as students and postdoctoral researchers) within the collaboration are represented, assisted, and supported throughout the  tenure of the CMB-S4 collaboration. This will include arranging mentors for junior members who desire mentorship, and facilitating junior member career advancement through relevant workshops and other activities. The JSAC chair and deputy chair are appointed by the \shorte after the elections and serve 2 year terms that parallel the collaboration's elections. Additional members will volunteer to be on the committee.
+
+
+\subsection{External Collaborators Committee}
+
+The role of the External Collaborators Committee (ECC) is to provide the necessary link to external follow-up observations or survey data that required to maximize the science return from CMB-S4. The ECC chair and deputy chair are appointed by the \shorte after the elections and serve terms that parallel the collaborations elections. Additional members will volunteer to be on the committee.
+
+The committee will draft all the necessary documents for external collaboration agreements and memorandums of understanding (MOUs). These will be presented to the co-spokespersons and \shorte who have ability the amend and alter these agreements and MOUs as they chose. Such agreements are then brought forward by the co-spokespersons to the Governing Board for final approval. \Comment{This might also fall under project management.}
+
+\subsection{Education and Outreach Committee}
+
+The Education and Public Outreach (EPO) committee is responsible for initiating, overseeing, and recording the S4 collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte after solicitation of nominations from the full collaboration. The chair is appointed by the co-spokespersons. Terms on the EPO follow the election cycles. A presentation of EPO efforts and written documentation of activities must be provided to the \shorte and the GB at each collaboration meeting or when requested by the GB. 
+
+\section{Membership Policy}
 
 The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis students %undergraduate students, 
 and others who contribute significantly to the CMB-S4 program. Membership conveys certain rights as described below, but comes with the obligation of an ongoing commitment of a substantial fraction of members' research time to the CMB-S4 program.
@@ -288,12 +319,11 @@ and others who contribute significantly to the CMB-S4 program. Membership convey
 \noindent
 
 
-\subsection{Membership Council}
-
-The duties of the Membership Council are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. 
+%\subsection{Membership Council}
+%The duties of the Membership Council are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. 
 
 \subsection{Membership Types}
-
+Five types of members are defined here.  
 \begin{itemize}
 
 \item {\bf Senior Member:} A Senior Member of the collaboration is a member who has a permanent appointment or an appointment, that under normal circumstances can be expected to be renewed indefinitely.   This includes tenure-track appointments at universities and their equivalents elsewhere.  
@@ -312,7 +342,7 @@ The duties of the Membership Council are to review and evaluate membership appli
 
 \subsection{Membership Rights}\label{sec:memberrights}
 
-Herein, ``members'' refers to Senior, Postdoctoral, Student and Provisional members (but not Legacy Members) unless otherwise qualified.  
+Herein, ``members'' refers to Senior, Postdoctoral, Student and Provisional Members (but not Legacy Members) unless otherwise qualified.  
 
 \begin{itemize}
 
@@ -327,11 +357,14 @@ Herein, ``members'' refers to Senior, Postdoctoral, Student and Provisional memb
 \end{itemize}
 
 \subsection{Membership Requirements}
-\begin{itemize}
 
-\item Members must commit effort to approved infrastructure tasks, which can include, for example, designing, building, and testing software, hardware, or simulations, as well as management. 
+ Members must commit effort to approved infrastructure tasks.   
+The Membership Council will work with the \exec\ to define and recommend infrastructure tasks that need filling.  
+Tasks can include,  for example, designing, building, and testing software, hardware, or simulations; contributing to commissioning and observations; and management tasks. 
+Just as for the hardware, we anticipate having a collaboration-wide architecture for the software.  Thus, members will be expected to comply with interface, documentation and code review requirements in support of the goals of the collaboration.   Other ways of contributing include taking on roles in the governance, including membership on the GB, EVC, ET, or the Councils and Committees described in \S\ref{sec:councils}.
 
-\end{itemize}
+
+
 
 \subsection{Membership Application and Approval Process}
 After the CMB-S4 collaboration is formed with a first set of initial members (see Section \ref{sec:initmembership}), the process for membership to CMB-S4 will be as specified below.
@@ -361,49 +394,35 @@ The CMB-S4 collaboration will initially consist of members who have satisfied th
 Within the first year of the Collaboration's establishment, prospective members can be granted membership by successfully petitioning the Membership Council despite not satisfying the above criteria.  The Membership Council may approve such applications during the first year without action by the Governing Board.  
 
 \subsection{Membership Review and Changes in Status}
+The membership status of each member will be reviewed by the Membership Council each year. 
+
 \begin{itemize} 
 
-\item Each Senior Member, and each independent postdoc not co-located with a Senior Member, will submit an annual activity report to the Membershp Council.  Senior members can discuss activities of their supervisees (e.g. postdocs and students) in their report. The Membership Council will review those reports, consulting with collaboration members and working group leaders as appropriate.
+\item Each Senior Member, and each independent postdoc not co-located with a Senior Member, will submit an annual activity report to the Membershp Council.  Senior Members can discuss activities of their supervisees (e.g. postdocs and students) in their report. The Membership Council will review those reports, consulting with collaboration members and working group leaders as appropriate.
 
 \item Provisional members will submit a annual activity report to the Membership Council, which will review the report and determine whether the provisional member should be promoted to a Senior Member status, continue as a Provisional Member, or have their membership revoked.  Provisional Membership is intended to be a temporary status.
 
-\item Members leaving the collaboration may be granted Legacy Membership upon review by the Membership Council and approval by the Govering Board.
+\item Members leaving the collaboration may be granted Legacy Membership upon review by the Membership Council and approval by the GB.
 
-\item If the effort of any member over the previous year seems lacking, the Membership Council will bring this to the attention of the Co-spokepersons and the Governing Board.  This can also be done at any time, should the Membership Council deem the actions of a member to have been egregious and detrimental to CMB-S4.
+\item If the effort of any member over the previous year seems lacking, the Membership Council will bring this to the attention of the Spokepersons and the GB.  This can also be done at any time, should the Membership Council deem the actions of a member to have been egregious and detrimental to CMB-S4.
 
 \item The Governing Board has the authority to grant or terminate all forms of membership.
 
-\item When a person's membership in the collaboration is terminated, they will no longer have access to the CMB-S4 document and database repository, internal forums, computing resources and data.  Authorship rights will continue, or not, as prescribed in the Publication Policy bylaws.
+\item When a person's membership in the collaboration ends, they will no longer have access to the CMB-S4 document and database repository, internal forums, computing resources and data.  Authorship rights will continue, or not, as prescribed in the Publication Policy bylaws.
 
 
 \end{itemize}
 
-\subsection{Procedure to Change Membership Policies}
+%\subsection{Procedure to Change Membership Policies}
 
-The Governing Board may change Membership policies by a 2/3 majority vote of voting members.
+%The Governing Board may change Membership policies by a 2/3 majority vote of voting members.
 
 %\input{membership}
 
 
-
-\section{Junior Scientist Advancement Committee}
-
-The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that junior members (defined as students and postdoctoral researchers) within the collaboration are represented, assisted, and supported throughout the  tenure of the CMB-S4 collaboration. This will include arranging mentors for junior members who desire mentorship, and facilitating junior member career advancement through relevant workshops and other activities. The JSAC chair and deputy chair are appointed by the \shorte after the elections and serve 2 year terms that parallel the collaboration's elections. Additional members will volunteer to be on the committee.
-
-
-\section{External Collaborators Committee}
-
-The role of the External Collaborators Committee (ECC) is to provide the necessary link to external follow-up observations or survey data that required to maximize the science return from CMB-S4. The ECC chair and deputy chair are appointed by the \shorte after the elections and serve terms that parallel the collaborations elections. Additional members will volunteer to be on the committee.
-
-The committee will draft all the necessary documents for external collaboration agreements and memorandums of understanding (MOUs). These will be presented to the co-spokespersons and \shorte who have ability the amend and alter these agreements and MOUs as they chose. Such agreements are then brought forward by the co-spokespersons to the Governing Board for final approval. \Comment{This might also fall under project management.}
-
-\section{Education and Outreach Committee}
-
-The Education and Public Outreach (EPO) committee is responsible for initiating, overseeing, and recording the S4 collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte after solicitation of nominations from the full collaboration. The chair is appointed by the co-spokespersons. Terms on the EPO follow the election cycles. A presentation of EPO efforts and written documentation of activities must be provided to the \shorte and the GB at each collaboration meeting or when requested by the GB. 
-
 %\input{publications}
 
-\section{Publication and Speakers Council}
+\section{Publication and Speakers Policy}
 \label{sec:pub}
 \subsection{Principles}
 This policy seeks to ensure an equitable distribution of credit for work in the CMB-S4 Collaboration, to encourage and incentivize active work by collaboration members, and to ensure the resulting publications are of high quality. The authorship policy of the American Physical Society (2002) states: \textit{``Authorship should be limited to those who have made a significant contribution to the concept, design, execution or interpretation of the research study. All those who have made significant contributions should be offered the opportunity to be listed as authors.''}\footnote{\url{https://www.aps.org/policy/statements/02_2.cfm}}
@@ -412,6 +431,8 @@ The Publication Policy will apply to all projects and publications that employ c
 engineering designs, and analysis pipelines. All CMB-S4 collaboration members agree to the publication policy upon joining, and if they leave the collaboration, they are bound by it for two years afterward.
 
 \subsection{Organization}
+The execution of the policy shall be overseen by the Publication and Speakers Council and its sub-committees (\S\ref{sec:pubcouncil}). The Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Council will keep track of active collaboration members and legacy member for the purposes of establishing author lists for papers.
+
 The execution of the policy shall be overseen by a Publication and Speakers Council chaired by an elected representative from the Executive Team.  There are two sub-committees: the Publications Board with eight collaboration members and the Speakers Bureau with four collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. The collaboration Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Board will keep track of active collaboration members and legacy member for the purposes of establishing author lists for papers.
 
 \subsection{Project Proposal Process}
@@ -513,7 +534,7 @@ Violations of the policy will be addressed by the Publication Board, which will 
 
 \section{Ombudspersons}
 
-{\bf This section is drawn from the “LSST DESC Code of Conduct”} which is licensed under Creative Commons CC0 1.0 \url{https://creativecommons.org/publicdomain/zero/1.0/}
+{\bf This section is drawn from the LSST DESC Code of Conduct} which is licensed under Creative Commons CC0 1.0 \url{https://creativecommons.org/publicdomain/zero/1.0/}
 
 CMB-S4 has two Ombudspersons who are available to members of the collaboration. The role of the Ombudspersons is to provide informal, confidential, nonjudgmental, impartial, and independent advice and arrange mediation for CMB-S4 members for the purposes of dispute resolution. Confidentiality is a privilege of the Ombudspersons and the only circumstances that there may be an exception to confidentiality is if the Ombudsperson is concerned by an imminent risk of serious harm, or if required by law in the applicable jurisdiction to anonymously report credible evidence of fraud, waste, or abuse concerning the use of government funds. As such, communications with an Ombudsperson do not constitute formal notice to the CMB-S4 collaboration or the individual's institute. If the individual would like to start formal proceedings, the Ombudsperson can provide guidance on the CMB-S4 process and referrals for institutional processes. The CMB-S4 process for formal complaints is outlined in the CMB-S4 Code of Conduct Implementation section. There are two CMB-S4 Ombudspersons to provide a choice of whom to speak with, and to ensure that there is at least one Ombudsperson available at Collaboration meetings. The Ombudspersons are available to CMB-S4 members who are experiencing conflicts or disputes as part of their CMB-S4 activities. The Ombudspersons will work together with the members who consult them to identify options for managing and resolving disputes and conflicts. This includes providing advice and support, referring individuals to appropriate resources, organizing informal mediation, and ensuring that the CMB-S4 Spokesperson is made aware of any systemic issues in the collaboration. The Ombudspersons term of 2 years, with the option of renewal. Due consideration will be given to the diversity of the candidates when the Ombusdspersons are selected. The Ombudspersons will be full members of CMB-S4, with a strong understanding of the organizational structure of the collaboration. \textbf{They will not hold any other leadership positions within the collaboration and will report only to the \shorte.} They must become members of the International Ombudsman Association and familiarize themselves with the extensive materials available on their website. \url{https://www.ombudsassociation.org}
 
