--- a/bylaws.tex
+++ b/bylaws.tex
@@ -41,30 +41,37 @@
 %\section{Collaboration Governance Objectives/Preamble}
 \section{Preamble}
 
-The CMB-S4 collaboration will carry out a CMB science program including the design and construction of the future experiment that is intended to be the definitive ground-based CMB program. CMB-S4 will deliver a highly constraining data set with which any model for the origin of the primordial fluctuations---be it inflation or an alternative theory---and their evolution to the structure seen in the Universe today must be consistent. This document outlines the CMB-S4 collaboration governance and organization of scientific activities.
+The purpose of the CMB-S4 Science Collaboration is to conduct a CMB science program centered on the future Stage-4 ground-based CMB experiment, CMB-S4. The Collaboration activities include advocating for, and advancing the design of, CMB-S4. The Collaboration is expected to play a major role in the establishment of the CMB-S4 construction project and in its operations, and the Collaboration is expected to lead the scientific analysis. 
+%construction and operation of the future Stage-4 %experiment that is intended to be the definitive 
+CMB-S4 will deliver a highly constraining data set with which any model for the origin of the primordial fluctuations---be it inflation or an alternative theory---and their evolution to the structure seen in the Universe today must be consistent. 
+This document outlines the CMB-S4 collaboration governance and organization of scientific activities.
 
 \subsection{Collaboration Governance Objectives}
- The collaboration will adhere to the following principles:
+ The structure of the Collaboration was designed to adhere to the following principles:
 
 \begin{itemize}
-\item The Collaboration will be organized based on models used in other successful  large DOE and NSF-supported experiments.  %Cosmic Frontier 
+\item The Collaboration organization will be based on models used in other successful  large DOE and NSF-supported experiments.  %Cosmic Frontier 
 
-\item The Collaboration will strive to maximize the scientific return of the experiment, producing high-quality science in a timely manner and promoting full utilization of the data through public data releases after a suitable proprietary period.
+\item The Collaboration will strive to maximum scientific the return of the experiment, producing high-quality science in a timely manner and promoting full utilization of the data through public data releases after a suitable proprietary period.
 
-\item The organizational structure of the collaboration should enable broad representation of members, and encourage consensus in decision making. %while fostering 
+\item The organizational structure of the collaboration should enable broad representation of its members, and encourage consensus in decision making. %while fostering 
 
-\item   All members of the collaboration will be expected to contribute to the success of the project through work on one or more areas of necessary infrastructure. The organizational structure should incentivize collaboration members to contribute to the execution of the project including work on hardware, software, testing, commissioning, operations, common science infrastructure, documentation and publications.  
+\item   All members of the collaboration will be expected to contribute to the success of the project through work on one or more areas of necessary infrastructure. The organizational structure should incentivize collaboration members to contribute to the advancement CMB-S4 including work on hardware, software, testing, commissioning, operations, common science infrastructure, documentation and publications.
 
 %\item All members of the collaboration will be expected to contribute to the success of the project through work on one or more areas of necessary infrastructure.
 
-\item Towards this end, the collaboration should provide appropriate credit to data analysts, hardware and/or software builders; provide leadership opportunities and other opportunities to promote career advancement; motivate people to work together towards common goals to complete the key project deliverables; and provide a healthy collaboration culture that establishes standards for behavior consistent with high ethical standards.
+\item Towards this end, the collaboration should provide appropriate credit to data analysts, hardware and/or software builders; provide leadership opportunities and other opportunities to promote career advancement; motivate people to work together towards common goals; %to complete the key project deliverables; 
+and provide a healthy collaboration culture that establishes standards for behavior consistent with high ethical standards.
 
 \end{itemize}
 
 
 \subsection{Definitions}
 
-Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of the motion.   A ``majority vote" requires only half the votes received.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" members of a governance body are those whose membership is due to their roles elsewhere in the Collaboration.  For example, the Science Council chairs (\S\ref{sec:SC}) are ex officio members of the Executive Team (\S\ref{sec:exec}).  
+The CMB-S4 Construction Project (the Project)  is distinct from the CMB-S4 Science Collaboration (the Collaboration). The Project will be responsible for final design and construction of CMB-S4, which by necessity will have strong oversight and  report directly to the associated funding agencies and other sources of funding.  The Collaboration and Project must work closely together; many Collaboration members are expected to have important roles within the Project. The Project ends when construction is completed and operations begin. Operations may be the responsibility of the Collaboration, or may be conducted by a distinct entity working closely with the Collaboration. These Bylaws pertain only to the Science Collaboration and do not specify the structure of, or relationship to, the Project or Operations. 
+\vskip 12pt
+
+Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of  the motion.   A ``majority vote" requires only half the votes received.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" members of a governance body are those whose membership is owing to their roles elsewhere in the Collaboration.  For example, the Science Council chairs (\S\ref{sec:SC}) are ex officio members of the Executive Team (\S\ref{sec:exec}).  
 
  %The presence of a simple majority of a body's members constitutes quorum for a meeting, and two-thirds of a body must be present for a vote to be valid.
 
